[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/connection/Connection.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.45098, 0.243137, 0.223529, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.45098, 0.243137, 0.223529, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.45098, 0.243137, 0.223529, 1 )
corner_detail = 5

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
script = ExtResource( 2 )

[node name="Up" type="Button" parent="."]
margin_left = 20.0
margin_top = 16.0
margin_right = 33.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Left" type="Button" parent="."]
margin_left = 11.0
margin_top = 32.0
margin_right = 24.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Right" type="Button" parent="."]
margin_left = 28.0
margin_top = 32.0
margin_right = 41.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Down" type="Button" parent="."]
margin_left = 20.0
margin_top = 48.0
margin_right = 33.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Level" type="Label" parent="."]
margin_left = 233.0
margin_top = 22.0
margin_right = 281.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.45098, 0.243137, 0.223529, 1 )
custom_colors/font_outline_modulate = Color( 0.0941176, 0.0784314, 0.145098, 1 )
custom_fonts/font = SubResource( 6 )

[node name="Actions" type="Label" parent="."]
margin_left = 233.0
margin_top = 40.0
margin_right = 281.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.45098, 0.243137, 0.223529, 1 )
custom_colors/font_outline_modulate = Color( 0.0941176, 0.0784314, 0.145098, 1 )
custom_fonts/font = SubResource( 6 )

[connection signal="button_down" from="Up" to="." method="_on_Up_button_down"]
[connection signal="button_down" from="Left" to="." method="_on_Left_button_down"]
[connection signal="button_down" from="Right" to="." method="_on_Right_button_down"]
[connection signal="button_down" from="Down" to="." method="_on_Down_button_down"]
